[package]
name = "hyper-client-sockets"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "A Hyper client library allowing access to Unix, VSock and Firecracker sockets"
rust-version = "1.63"
repository = "https://github.com/kanpov/hyper-client-sockets"
readme = "README.md"
keywords = ["hyper", "client", "sockets"]
categories = ["web-programming", "web-programming::http-client"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hex = "0.4.3"
hyper = { version = "1.4.1", default-features = false }
futures-io = "0.3.31"
http = "1.1.0"

# hyper-util support
tower-service = { version = "0.3.3", optional = true }
hyper-util = { version = "0.1.9", features = [
    "client-legacy",
], optional = true }
# tokio backend
tokio = { version = "1.40.0", features = ["net", "io-util"], optional = true }
# firecracker sockets
futures-util = { version = "0.3.31", default-features = false, features = [
    "io",
], optional = true }
# vsock sockets
vsock = { version = "0.5.1", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
hyper-client-sockets = { path = ".", features = ["full"] }
tokio = { version = "1.38.0", features = ["macros", "fs"] }

[features]
default = []
full = ["tokio-backend", "unix", "vsock", "firecracker", "connector"]
tokio-backend = ["dep:tokio", "hyper-util/tokio", "dep:futures-util"]
connector = ["dep:tower-service", "dep:hyper-util"]
unix = []
vsock = ["dep:vsock", "dep:libc"]
firecracker = ["dep:futures-util"]
