[package]
name = "hyper-client-sockets"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "A Hyper client library allowing access to Unix, VSock and Firecracker sockets"
rust-version = "1.63"
repository = "https://github.com/kanpov/hyper-client-sockets"
readme = "README.md"
keywords = ["hyper", "client", "sockets"]
categories = ["web-programming", "web-programming::http-client"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hyper = { version = "1.5", default-features = false }

# hyper-util support
tower-service = { version = "0.3.3", optional = true }
hyper-util = { version = "0.1.9", optional = true, default-features = false }
hex = { version = "0.4.3", optional = true }
http = { version = "1.1.0", optional = true }
# tokio backend
tokio = { version = "1.40.0", features = ["net", "io-util"], optional = true }
libc = { version = "0.2", optional = true }
# vsock sockets
vsock = { version = "0.5.1", optional = true }

[dev-dependencies]
hyper-client-sockets = { path = ".", features = ["full"] }
tokio = { version = "1.38.0", features = ["macros", "fs"] }

[features]
default = []
full = ["tokio-backend", "unix", "vsock", "firecracker", "hyper-util"]
tokio-backend = ["dep:tokio", "dep:libc", "hyper-util/tokio"]
hyper-util = [
    "dep:tower-service",
    "hyper-util/client-legacy",
    "dep:hex",
    "dep:http",
]
unix = []
vsock = ["dep:vsock"]
firecracker = []
