[package]
name = "hyper-client-sockets"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "A Hyper client library allowing access to Unix, VSock and Firecracker sockets"
rust-version = "1.63"
repository = "https://github.com/rust-firecracker/hyper-client-sockets"
readme = "README.md"
keywords = ["hyper", "client", "sockets"]
categories = ["web-programming", "web-programming::http-client"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hyper = { version = "1.5.2", default-features = false }

# hyper-util support
tower-service = { version = "0.3.3", optional = true }
hyper-util = { version = "0.1.9", optional = true, default-features = false }
hex = { version = "0.4.3", optional = true }
http = { version = "1.1.0", optional = true }
# tokio backend
tokio = { version = "1.40.0", features = ["net", "io-util"], optional = true }
libc = { version = "0.2.169", optional = true }
# async-io backend
async-io = { version = "2.4.0", optional = true }
smol-hyper = { version = "0.1.1", optional = true, default-features = false, features = [
    "async-io",
] }
futures-lite = { version = "2.5.0", optional = true }
# vsock sockets
vsock = { version = "0.5.1", optional = true }

[dev-dependencies]
hyper-client-sockets = { path = ".", features = ["full"] }
# runtimes
tokio = { version = "1.38.0", features = ["macros", "fs"] }
async-executor = "1.13.1"
# hyper utils
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1.9", features = [
    "client",
    "client-legacy",
    "http1",
] }
http-body-util = "0.1.2"
bytes = "1.9.0"
# misc
uuid = { version = "1.11.0", features = ["v4"] }
tokio-vsock = "0.6.0"
fastrand = "2.3.0"
smol-hyper = "0.1.1"

[features]
default = []
full = [
    "tokio-backend",
    "async-io-backend",
    "unix",
    "vsock",
    "firecracker",
    "hyper-util",
]
tokio-backend = ["dep:tokio", "dep:libc", "hyper-util/tokio"]
async-io-backend = [
    "dep:async-io",
    "dep:smol-hyper",
    "dep:futures-lite",
    "dep:libc",
]
hyper-util = [
    "dep:tower-service",
    "hyper-util/client-legacy",
    "dep:hex",
    "dep:http",
]
unix = []
vsock = ["dep:vsock"]
firecracker = []
